trunk/Archive2/20/65fa75264330bc/output
main.cpp: In function 'int main()':
main.cpp:10:22: error: expected ',' before '&' token
     auto fn = [myName&]{
                      ^
main.cpp:10:23: error: expected identifier before ']' token
     auto fn = [myName&]{
                       ^
main.cpp:16:5: error: 'cout' was not declared in this scope
     cout << fn();
     ^
main.cpp:16:5: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:7:9: warning: unused variable 'myFavNum' [-Wunused-variable]
     int myFavNum = 7;
         ^
